starter-code/shared/lib.h

typedef __builtin_va_list va_list;
typedef unsigned short uint16_t;
typedef unsigned long uintptr_t;
typedef unsigned long size_t;         // sizes and offsets
typedef int pid_t;                    // process IDs
void* memmove(void* dst, const void* src, size_t n);
void* memset(void* s, int c, size_t n);
size_t strlen(const char* s);
size_t strnlen(const char* s, size_t maxlen);
char* strcpy(char* dst, const char* src);
int strcmp(const char* a, const char* b);
char* strchr(const char* s, int c);
int snprintf(char* s, size_t size, const char* format, ...);
int vsnprintf(char* s, size_t size, const char* format, va_list val);
int rand(void);
void srand(unsigned seed);
void assert_fail(const char* file, int line, const char* msg)
    __attribute__((noinline, noreturn));
extern uint16_t console[CONSOLE_ROWS * CONSOLE_COLUMNS];
// current position of the cursor (80 * ROW + COL)
extern int cursorpos;
// console_clear
//    Erases the console and moves the cursor to the upper left (CPOS(0, 0)).
void console_clear(void);
// console_printf(cursor, color, format, ...)
//    Format and print a message to the x86 console.
//
//    The `format` argument supports some of the C printf function's escapes:
//    %d (to print an integer in decimal notation), %u (to print an unsigned
//    integer in decimal notation), %x (to print an unsigned integer in
//    hexadecimal notation), %c (to print a character), and %s (to print a
//    string). It also takes field widths and precisions like '%10s'.
//
//    The `cursor` argument is a cursor position, such as `CPOS(r, c)` for
//    row number `r` and column number `c`.
//
//    The `color` argument is the initial color used to print. 0x0700 is a
//    good choice (grey on black). The `format` escape %C changes the color
//    being printed.  It takes an integer from the parameter list.
//
//    Returns the final position of the cursor.
int console_printf(int cpos, int color, const char* format, ...)
    __attribute__((noinline));
// console_vprintf(cpos, color, format val)
//    The vprintf version of console_printf.
int console_vprintf(int cpos, int color, const char* format, va_list val)
    __attribute__((noinline));
// Generic print library

typedef struct printer printer;
struct printer {
    void (*putc)(printer* p, unsigned char c, int color);
};
void printer_vprintf(printer* p, int color, const char* format, va_list val);
// struct vamapping object
// used to store mapping information by virtual_memory_lookup and
// other kernel functions
typedef struct vamapping {
    int pn;           // physical page number; -1 if unmapped
    uintptr_t pa;     // physical address; (uintptr_t) -1 if unmapped
    int perm;         // permissions; 0 if unmapped

} vamapping;