starter-code/pervious/bindings/mod.rs

extern "C" {
    pub fn memmove(
        dst: *mut ::core::ffi::c_void,
        src: *const ::core::ffi::c_void,
        n: ::core::ffi::c_ulong,
    ) -> *mut ::core::ffi::c_void;
}
extern "C" {
    pub fn memset(
        s: *mut ::core::ffi::c_void,
        c: ::core::ffi::c_int,
        n: ::core::ffi::c_ulong,
    ) -> *mut ::core::ffi::c_void;
}
extern "C" {
    pub fn strlen(s: *const ::core::ffi::c_char) -> ::core::ffi::c_ulong;
}
extern "C" {
    pub fn strnlen(s: *const ::core::ffi::c_char, maxlen: usize) -> usize;
}
extern "C" {
    pub fn strcpy(
        dst: *mut ::core::ffi::c_char,
        src: *const ::core::ffi::c_char,
    ) -> *mut ::core::ffi::c_char;
}
extern "C" {
    pub fn strcmp(
        a: *const ::core::ffi::c_char,
        b: *const ::core::ffi::c_char,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn strchr(s: *const ::core::ffi::c_char, c: ::core::ffi::c_int)
        -> *mut ::core::ffi::c_char;
}
extern "C" {
    pub fn snprintf(
        s: *mut ::core::ffi::c_char,
        size: ::core::ffi::c_ulong,
        format: *const ::core::ffi::c_char,
        ...
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn vsnprintf(
        s: *mut ::core::ffi::c_char,
        size: ::core::ffi::c_ulong,
        format: *const ::core::ffi::c_char,
        val: *mut __va_list_tag,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn rand() -> ::core::ffi::c_int;
}
extern "C" {
    pub fn srand(seed: ::core::ffi::c_uint);
}
extern "C" {
    pub fn assert_fail(
        file: *const ::core::ffi::c_char,
        line: ::core::ffi::c_int,
        msg: *const ::core::ffi::c_char,
    ) -> !;
}
extern "C" {
    pub fn panic(format: *const ::core::ffi::c_char, ...) -> !;
}
extern "C" {
    pub static mut console: [u16; 2000usize];
}
extern "C" {
    pub static mut cursorpos: ::core::ffi::c_int;
}
extern "C" {
    pub fn console_clear();
}
extern "C" {
    pub fn console_printf(
        cpos: ::core::ffi::c_int,
        color: ::core::ffi::c_int,
        format: *const ::core::ffi::c_char,
        ...
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn console_vprintf(
        cpos: ::core::ffi::c_int,
        color: ::core::ffi::c_int,
        format: *const ::core::ffi::c_char,
        val: *mut __va_list_tag,
    ) -> ::core::ffi::c_int;
}
#[repr(C, packed)]
#[derive(Debug, Copy, Clone)]
pub struct printer {
    pub putc: ::core::option::Option<
        unsafe extern "C" fn(p: *mut printer, c: ::core::ffi::c_uchar, color: ::core::ffi::c_int),
    >,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of printer"][::core::mem::size_of::<printer>() - 8usize];
    ["Alignment of printer"][::core::mem::align_of::<printer>() - 1usize];
    ["Offset of field: printer::putc"][::core::mem::offset_of!(printer, putc) - 0usize];
};
extern "C" {
    pub fn printer_vprintf(
        p: *mut printer,
        color: ::core::ffi::c_int,
        format: *const ::core::ffi::c_char,
        val: *mut __va_list_tag,
    );
}
#[repr(C, packed)]
#[derive(Debug, Copy, Clone)]
pub struct vamapping {
    pub pn: ::core::ffi::c_int,
    pub pa: usize,
    pub perm: ::core::ffi::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of vamapping"][::core::mem::size_of::<vamapping>() - 16usize];
    ["Alignment of vamapping"][::core::mem::align_of::<vamapping>() - 1usize];
    ["Offset of field: vamapping::pn"][::core::mem::offset_of!(vamapping, pn) - 0usize];
    ["Offset of field: vamapping::pa"][::core::mem::offset_of!(vamapping, pa) - 4usize];
    ["Offset of field: vamapping::perm"][::core::mem::offset_of!(vamapping, perm) - 12usize];
};
pub type x86_64_pageentry_t = u64;
#[repr(C)]
#[repr(align(4096))]
#[derive(Debug, Copy, Clone)]
pub struct x86_64_pagetable {
    pub entry: [x86_64_pageentry_t; 512usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of x86_64_pagetable"][::core::mem::size_of::<x86_64_pagetable>() - 4096usize];
    ["Alignment of x86_64_pagetable"][::core::mem::align_of::<x86_64_pagetable>() - 4096usize];
    ["Offset of field: x86_64_pagetable::entry"]
        [::core::mem::offset_of!(x86_64_pagetable, entry) - 0usize];
};
#[repr(C, packed)]
#[derive(Debug, Copy, Clone)]
pub struct x86_64_registers {
    pub reg_rax: u64,
    pub reg_rcx: u64,
    pub reg_rdx: u64,
    pub reg_rbx: u64,
    pub reg_rbp: u64,
    pub reg_rsi: u64,
    pub reg_rdi: u64,
    pub reg_r8: u64,
    pub reg_r9: u64,
    pub reg_r10: u64,
    pub reg_r11: u64,
    pub reg_r12: u64,
    pub reg_r13: u64,
    pub reg_r14: u64,
    pub reg_r15: u64,
    pub reg_fs: u64,
    pub reg_gs: u64,
    pub reg_intno: u64,
    pub reg_err: u64,
    pub reg_rip: u64,
    pub reg_cs: u16,
    pub reg_padding2: [u16; 3usize],
    pub reg_rflags: u64,
    pub reg_rsp: u64,
    pub reg_ss: u16,
    pub reg_padding3: [u16; 3usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of x86_64_registers"][::core::mem::size_of::<x86_64_registers>() - 192usize];
    ["Alignment of x86_64_registers"][::core::mem::align_of::<x86_64_registers>() - 1usize];
    ["Offset of field: x86_64_registers::reg_rax"]
        [::core::mem::offset_of!(x86_64_registers, reg_rax) - 0usize];
    ["Offset of field: x86_64_registers::reg_rcx"]
        [::core::mem::offset_of!(x86_64_registers, reg_rcx) - 8usize];
    ["Offset of field: x86_64_registers::reg_rdx"]
        [::core::mem::offset_of!(x86_64_registers, reg_rdx) - 16usize];
    ["Offset of field: x86_64_registers::reg_rbx"]
        [::core::mem::offset_of!(x86_64_registers, reg_rbx) - 24usize];
    ["Offset of field: x86_64_registers::reg_rbp"]
        [::core::mem::offset_of!(x86_64_registers, reg_rbp) - 32usize];
    ["Offset of field: x86_64_registers::reg_rsi"]
        [::core::mem::offset_of!(x86_64_registers, reg_rsi) - 40usize];
    ["Offset of field: x86_64_registers::reg_rdi"]
        [::core::mem::offset_of!(x86_64_registers, reg_rdi) - 48usize];
    ["Offset of field: x86_64_registers::reg_r8"]
        [::core::mem::offset_of!(x86_64_registers, reg_r8) - 56usize];
    ["Offset of field: x86_64_registers::reg_r9"]
        [::core::mem::offset_of!(x86_64_registers, reg_r9) - 64usize];
    ["Offset of field: x86_64_registers::reg_r10"]
        [::core::mem::offset_of!(x86_64_registers, reg_r10) - 72usize];
    ["Offset of field: x86_64_registers::reg_r11"]
        [::core::mem::offset_of!(x86_64_registers, reg_r11) - 80usize];
    ["Offset of field: x86_64_registers::reg_r12"]
        [::core::mem::offset_of!(x86_64_registers, reg_r12) - 88usize];
    ["Offset of field: x86_64_registers::reg_r13"]
        [::core::mem::offset_of!(x86_64_registers, reg_r13) - 96usize];
    ["Offset of field: x86_64_registers::reg_r14"]
        [::core::mem::offset_of!(x86_64_registers, reg_r14) - 104usize];
    ["Offset of field: x86_64_registers::reg_r15"]
        [::core::mem::offset_of!(x86_64_registers, reg_r15) - 112usize];
    ["Offset of field: x86_64_registers::reg_fs"]
        [::core::mem::offset_of!(x86_64_registers, reg_fs) - 120usize];
    ["Offset of field: x86_64_registers::reg_gs"]
        [::core::mem::offset_of!(x86_64_registers, reg_gs) - 128usize];
    ["Offset of field: x86_64_registers::reg_intno"]
        [::core::mem::offset_of!(x86_64_registers, reg_intno) - 136usize];
    ["Offset of field: x86_64_registers::reg_err"]
        [::core::mem::offset_of!(x86_64_registers, reg_err) - 144usize];
    ["Offset of field: x86_64_registers::reg_rip"]
        [::core::mem::offset_of!(x86_64_registers, reg_rip) - 152usize];
    ["Offset of field: x86_64_registers::reg_cs"]
        [::core::mem::offset_of!(x86_64_registers, reg_cs) - 160usize];
    ["Offset of field: x86_64_registers::reg_padding2"]
        [::core::mem::offset_of!(x86_64_registers, reg_padding2) - 162usize];
    ["Offset of field: x86_64_registers::reg_rflags"]
        [::core::mem::offset_of!(x86_64_registers, reg_rflags) - 168usize];
    ["Offset of field: x86_64_registers::reg_rsp"]
        [::core::mem::offset_of!(x86_64_registers, reg_rsp) - 176usize];
    ["Offset of field: x86_64_registers::reg_ss"]
        [::core::mem::offset_of!(x86_64_registers, reg_ss) - 184usize];
    ["Offset of field: x86_64_registers::reg_padding3"]
        [::core::mem::offset_of!(x86_64_registers, reg_padding3) - 186usize];
};
#[repr(C, packed(2))]
#[derive(Debug, Copy, Clone)]
pub struct x86_64_pseudodescriptor {
    pub pseudod_limit: u16,
    pub pseudod_base: u64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of x86_64_pseudodescriptor"]
        [::core::mem::size_of::<x86_64_pseudodescriptor>() - 10usize];
    ["Alignment of x86_64_pseudodescriptor"]
        [::core::mem::align_of::<x86_64_pseudodescriptor>() - 2usize];
    ["Offset of field: x86_64_pseudodescriptor::pseudod_limit"]
        [::core::mem::offset_of!(x86_64_pseudodescriptor, pseudod_limit) - 0usize];
    ["Offset of field: x86_64_pseudodescriptor::pseudod_base"]
        [::core::mem::offset_of!(x86_64_pseudodescriptor, pseudod_base) - 2usize];
};
#[repr(C, packed(4))]
#[derive(Debug, Copy, Clone)]
pub struct x86_64_taskstate {
    pub ts_reserved0: u32,
    pub ts_rsp: [u64; 3usize],
    pub ts_ist: [u64; 7usize],
    pub ts_reserved1: u64,
    pub ts_reserved2: u16,
    pub ts_iomap_base: u16,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of x86_64_taskstate"][::core::mem::size_of::<x86_64_taskstate>() - 96usize];
    ["Alignment of x86_64_taskstate"][::core::mem::align_of::<x86_64_taskstate>() - 4usize];
    ["Offset of field: x86_64_taskstate::ts_reserved0"]
        [::core::mem::offset_of!(x86_64_taskstate, ts_reserved0) - 0usize];
    ["Offset of field: x86_64_taskstate::ts_rsp"]
        [::core::mem::offset_of!(x86_64_taskstate, ts_rsp) - 4usize];
    ["Offset of field: x86_64_taskstate::ts_ist"]
        [::core::mem::offset_of!(x86_64_taskstate, ts_ist) - 28usize];
    ["Offset of field: x86_64_taskstate::ts_reserved1"]
        [::core::mem::offset_of!(x86_64_taskstate, ts_reserved1) - 84usize];
    ["Offset of field: x86_64_taskstate::ts_reserved2"]
        [::core::mem::offset_of!(x86_64_taskstate, ts_reserved2) - 92usize];
    ["Offset of field: x86_64_taskstate::ts_iomap_base"]
        [::core::mem::offset_of!(x86_64_taskstate, ts_iomap_base) - 94usize];
};
#[repr(C, packed)]
#[derive(Debug, Copy, Clone)]
pub struct x86_64_gatedescriptor {
    pub gd_low: u64,
    pub gd_high: u64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of x86_64_gatedescriptor"][::core::mem::size_of::<x86_64_gatedescriptor>() - 16usize];
    ["Alignment of x86_64_gatedescriptor"]
        [::core::mem::align_of::<x86_64_gatedescriptor>() - 1usize];
    ["Offset of field: x86_64_gatedescriptor::gd_low"]
        [::core::mem::offset_of!(x86_64_gatedescriptor, gd_low) - 0usize];
    ["Offset of field: x86_64_gatedescriptor::gd_high"]
        [::core::mem::offset_of!(x86_64_gatedescriptor, gd_high) - 8usize];
};
pub const procstate_P_FREE: procstate = 0;
pub const procstate_P_RUNNABLE: procstate = 1;
pub const procstate_P_BLOCKED: procstate = 2;
pub const procstate_P_BROKEN: procstate = 3;
pub type procstate = ::core::ffi::c_uint;
pub use self::procstate as ProcstateT;
#[repr(C, packed)]
#[derive(Debug, Copy, Clone)]
pub struct proc_ {
    pub p_pid: pid_t,
    pub p_registers: x86_64_registers,
    pub p_state: ProcstateT,
    pub p_pagetable: *mut x86_64_pagetable,
    pub display_status: u8,
}
